--- a/css/index.css
+++ b/css/index.css
@@ -4,11 +4,13 @@
 /* Start landing */
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 body {
   font-family: "Titillium Web", sans-serif;
   scroll-behavior: smooth;
-  background-color: #eee;
+  background: #20223a;
 }
 body::-webkit-scrollbar {
   width: 0.25rem;
@@ -186,5 +188,110 @@ body::-webkit-scrollbar-thumb {
 }
 /* End Landing page */
 /* service section */
-
+#services {
+  color: black;
+  min-height: 740px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+#services h2 {
+  color: #fff;
+  font-size: 2rem;
+  margin-bottom: 20px;
+  position: relative;
+  font-weight: 800;
+}
+#services h2::after {
+  position: absolute;
+  content: "";
+  top: 8px;
+  left: -30px;
+  height: 0px;
+  width: 0px;
+  border-top: 20px solid transparent;
+  border-left: 20px solid var(--main-color);
+}
+#services h2::before {
+  position: absolute;
+  content: "";
+  top: 8px;
+  right: -30px;
+  height: 0px;
+  width: 0px;
+  border-top: 20px solid transparent;
+  border-right: 20px solid var(--main-color);
+}
+#services #paragraph {
+  width: 40%;
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.7);
+  text-align: center;
+  line-height: 1.5rem;
+  white-space: 1px;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+  z-index: 9;
+  margin-top: 20px;
+}
+.cards .card {
+  height: 350px;
+  width: 380px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 0 8%;
+  background: rgb(65, 62, 105);
+  position: relative;
+  border-radius: 10px;
+}
+.cards .card::before {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  border-radius: 10px;
+  background-color: var(--main-color);
+  transform: rotate(0deg);
+  z-index: -1;
+  transition: .6s;
+}
+.cards .card:hover.card:before {
+  transform: rotate(10deg);
+}
+.cards .card i {
+  font-size: 2.5rem;
+  color: var(--main-color);
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+.cards .card h3 {
+  font-size: 1.8rem;
+  color: #fff;
+  margin-bottom: 10px;
+}
+.cards .card .content p {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1.05rem;
+    margin-bottom: 20px;
+}
+@media (max-width:1100px){
+  #services h2 {
+    margin-top: 30px;
+  }
+  .cards {
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+  }
+}
 /* end service section */
