--- a/css/index.css
+++ b/css/index.css
@@ -22,9 +22,6 @@ body::-webkit-scrollbar-thumb {
   background: var(--main-color);
 }
 /* Start navbar */
-.navbar {
-  background-color: rgba(0, 0, 0, 0.4);
-}
 .navbar .logo {
   font-family: "Gagalin", sans-serif;
 }
@@ -38,6 +35,10 @@ body::-webkit-scrollbar-thumb {
 .signupBtn {
   background: var(--main-color);
 }
+/* .scrolled-background {
+  background-color: #20223a;
+  transition: 1s;
+} */
 @media (max-width: 991px) {
   .sidebar {
     background-color: rgba(255, 255, 255, 0.15);
@@ -53,6 +54,7 @@ body::-webkit-scrollbar-thumb {
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: 5;
+  width: 80%;
   color: white;
   text-align: center;
 }
@@ -86,14 +88,16 @@ body::-webkit-scrollbar-thumb {
   letter-spacing: 1px;
 }
 .intro .intro-text button {
+  text-decoration: none;
   background: transparent;
   border: 0;
   border-bottom: 2px solid white;
   padding: 18px;
+  margin-top: 40px;
   color: white;
   font-weight: 600;
-  margin-top: 40px;
   transition: 0.5s;
+  pointer-events: cursor;
 }
 .intro .intro-text button:hover {
   color: #fac710;
@@ -188,70 +192,51 @@ body::-webkit-scrollbar-thumb {
 }
 /* End Landing page */
 /* service section */
-#services {
-  color: black;
-  min-height: 740px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+.services {
+  min-height: 100vh;
 }
-#services h2 {
-  color: #fff;
-  font-size: 2rem;
-  margin-bottom: 20px;
+.services-heading h2 {
+  display: inline-block;
+  font-size: 3rem;
   position: relative;
   font-weight: 800;
+  margin: 60px 0;
 }
-#services h2::after {
+.services-heading h2::after {
   position: absolute;
   content: "";
-  top: 8px;
+  top: 18px;
   left: -30px;
   height: 0px;
   width: 0px;
   border-top: 20px solid transparent;
   border-left: 20px solid var(--main-color);
 }
-#services h2::before {
+.services-heading h2::before {
   position: absolute;
   content: "";
-  top: 8px;
+  top: 18px;
   right: -30px;
   height: 0px;
   width: 0px;
   border-top: 20px solid transparent;
   border-right: 20px solid var(--main-color);
 }
-#services #paragraph {
-  width: 40%;
+.services-heading p {
   font-size: 1rem;
   color: rgba(255, 255, 255, 0.7);
-  text-align: center;
   line-height: 1.5rem;
-  white-space: 1px;
-  margin-bottom: 40px;
   text-transform: uppercase;
   letter-spacing: 1px;
+  width: 80%;
+  margin: auto;
 }
 .cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 25px;
-  z-index: 9;
-  margin-top: 20px;
+  margin-top: 60px;
 }
-.cards .card {
-  height: 350px;
-  width: 380px;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-  padding: 0 8%;
+.card {
+  padding: 40px;
   background: rgb(65, 62, 105);
-  position: relative;
-  border-radius: 10px;
 }
 .cards .card::before {
   position: absolute;
@@ -264,34 +249,22 @@ body::-webkit-scrollbar-thumb {
   background-color: var(--main-color);
   transform: rotate(0deg);
   z-index: -1;
-  transition: .6s;
-}
-.cards .card:hover.card:before {
-  transform: rotate(10deg);
+  transition: 0.6s;
 }
 .cards .card i {
   font-size: 2.5rem;
   color: var(--main-color);
-  margin-top: 40px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 .cards .card h3 {
   font-size: 1.8rem;
   color: #fff;
-  margin-bottom: 10px;
 }
 .cards .card .content p {
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 1.05rem;
-    margin-bottom: 20px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 1.05rem;
 }
-@media (max-width:1100px){
-  #services h2 {
-    margin-top: 30px;
-  }
-  .cards {
-    grid-template-columns: repeat(1, 1fr);
-    justify-content: center;
-  }
+.cards .card:hover.card:before {
+  transform: rotate(10deg);
 }
 /* end service section */
